Fix text overflowing in app settings

--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -83,6 +83,10 @@ ion-label.nowrap > *:not(div) {
 	overflow: hidden !important;
 }
 
+ion-label.wrap {
+	text-wrap-mode: wrap !important;
+}
+
 .md ion-input.input-label-placement-floating,
 .md ion-textarea.textarea-label-placement-floating {
 	margin: 16px 0 0 0;
